src/__tests__/__snapshots__/annotations.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Annotations Query Given an annotation query should generate the correct request 1`] = `
{
  "data": {
    "filter": {
      "activeAtTime": {
        "max": 1549338475000,
        "min": 1549336675000,
      },
      "assetIds": [
        123,
      ],
      "type": "type 1",
    },
    "limit": 1000,
  },
  "headers": undefined,
  "method": "POST",
  "url": "/api/datasources/proxy/6/cdf-api-key/api/v1/projects/TestProject/events/list",
}
`;

exports[`Annotations Query Given an annotation query where nothing is returned should generate the correct request 1`] = `
{
  "data": {
    "filter": {
      "activeAtTime": {
        "max": 1549338475000,
        "min": 1549336675000,
      },
      "type": "non-existant type",
    },
    "limit": 1000,
  },
  "headers": undefined,
  "method": "POST",
  "url": "/api/datasources/proxy/6/cdf-api-key/api/v1/projects/TestProject/events/list",
}
`;

exports[`Annotations Query Given an annotation query with a metadata request should generate the correct request 1`] = `
{
  "data": {
    "filter": {
      "activeAtTime": {
        "max": 1549338475000,
        "min": 1549336675000,
      },
      "metadata": {
        "key1": "value1",
        "key2": "value2",
      },
    },
    "limit": 1000,
  },
  "headers": undefined,
  "method": "POST",
  "url": "/api/datasources/proxy/6/cdf-api-key/api/v1/projects/TestProject/events/list",
}
`;

exports[`Annotations Query Given an annotation query with additional time filters should generate the correct request 1`] = `
{
  "data": {
    "filter": {
      "activeAtTime": {
        "max": 1549338475000,
        "min": 1549336675000,
      },
      "endTime": {
        "isNull": false,
      },
      "startTime": {
        "min": 123,
      },
    },
    "limit": 1000,
  },
  "headers": undefined,
  "method": "POST",
  "url": "/api/datasources/proxy/6/cdf-api-key/api/v1/projects/TestProject/events/list",
}
`;

exports[`Annotations Query Given an annotation query with an incomplete event expression should throw a parse error 1`] = `
"Parser: Unexpected end of input:
events{
       ^"
`;

exports[`Annotations Query Given an annotation query with an incorrect event expression should throw a parse error 1`] = `
"Parser: Syntax error:
events{ name=~event, foo}
              ^"
`;

exports[`Annotations Query Given an annotation query with filters should generate the correct request 1`] = `
Object {
  "data": Object {
    "filter": Object {
      "activeAtTime": Object {
        "max": 1549338475000,
        "min": 1549336675000,
      },
    },
    "limit": 1000,
  },
  "headers": undefined,
  "method": "POST",
  "url": "/api/datasources/proxy/6/cdf-api-key/api/v1/projects/TestProject/events/list",
}
`;

exports[`Annotations Query Given an annotation query with variables should generate the correct request 1`] = `
{
  "data": {
    "filter": {
      "activeAtTime": {
        "max": 1549338475000,
        "min": 1549336675000,
      },
      "assetIds": [
        123,
      ],
    },
    "limit": 1000,
  },
  "headers": undefined,
  "method": "POST",
  "url": "/api/datasources/proxy/6/cdf-api-key/api/v1/projects/TestProject/events/list",
}
`;

exports[`Annotations Query Given an annotation query with variables should generate the correct request 2`] = `
{
  "data": {
    "filter": {
      "activeAtTime": {
        "max": 1549338475000,
        "min": 1549336675000,
      },
      "assetIds": [
        123,
        456,
      ],
    },
    "limit": 1000,
  },
  "headers": undefined,
  "method": "POST",
  "url": "/api/datasources/proxy/6/cdf-api-key/api/v1/projects/TestProject/events/list",
}
`;
